--- a/app/src/main/res/layout/buy_layout.xml
+++ b/app/src/main/res/layout/buy_layout.xml
@@ -5,6 +5,17 @@
     android:orientation="vertical"
     android:padding="@dimen/default_gap">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Cracked"
+        android:id="@+id/textView7"
+        android:layout_gravity="center_horizontal"
+        android:textSize="52sp"
+        android:textStyle="bold"
+        android:textColor="#d31e1e" />
+
     <ScrollView
         android:id="@+id/scrollView6"
         android:layout_width="match_parent"
@@ -23,7 +34,8 @@
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Premium ($2.99)"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/premium_desc"
@@ -34,7 +46,8 @@
                 android:layout_marginRight="@dimen/default_gap_4x"
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Block typing alert\nBlock presence from Chat\nUnlimited groups\nRemove Ads"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/premium"
@@ -46,7 +59,8 @@
                 android:minHeight="35dp"
                 android:minWidth="125dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/buy" />
+                android:src="@drawable/buy"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/deluxe_title"
@@ -56,7 +70,8 @@
                 android:layout_marginTop="@dimen/default_gap_4x"
                 android:text="Deluxe ($9.99)"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/deluxe_desc"
@@ -67,7 +82,8 @@
                 android:layout_marginRight="@dimen/default_gap_4x"
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Every Premium Feature\nStealth Viewing - snaps appear as unviewed\nGod mode - users can&apos;t save your snaps"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/deluxe"
@@ -79,7 +95,8 @@
                 android:minHeight="35dp"
                 android:minWidth="125dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/buy" />
+                android:src="@drawable/buy"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
