--- a/app/src/main/res/layout/activate_layout.xml
+++ b/app/src/main/res/layout/activate_layout.xml
@@ -16,24 +16,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Cracked so don&apos;t do shit"
-                android:id="@+id/textView6"
-                android:layout_gravity="center_horizontal"
-                android:visibility="visible"
-                android:textColor="#f51212"
-                android:textStyle="bold" />
-
-            <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Redeem ID:"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/confirmationID"
@@ -45,8 +33,7 @@
                 android:hint="Type here your redeem ID"
                 android:inputType="textNoSuggestions|textVisiblePassword"
                 android:maxLength="20"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -75,8 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/default_gap_2x"
-                android:text="Redeem license"
-                android:visibility="gone" />
+                android:text="Redeem license" />
 
             <TextView
                 android:id="@+id/textView"
@@ -118,8 +104,7 @@
                 android:hint="Type here your username"
                 android:inputType="textNoSuggestions|textVisiblePassword"
                 android:maxLength="20"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/god_desc"
@@ -128,8 +113,7 @@
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Your privacy is key to us, that's why only your username's SHA256 hash is sent to the server."
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/god"
