--- a/app/src/main/res/layout/buy_layout.xml
+++ b/app/src/main/res/layout/buy_layout.xml
@@ -5,17 +5,6 @@
     android:orientation="vertical"
     android:padding="@dimen/default_gap">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Cracked"
-        android:id="@+id/textView7"
-        android:layout_gravity="center_horizontal"
-        android:textSize="52sp"
-        android:textStyle="bold"
-        android:textColor="#d31e1e" />
-
     <ScrollView
         android:id="@+id/scrollView6"
         android:layout_width="match_parent"
@@ -34,8 +23,7 @@
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Premium ($2.99)"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/premium_desc"
@@ -46,8 +34,7 @@
                 android:layout_marginRight="@dimen/default_gap_4x"
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Block typing alert\nBlock presence from Chat\nUnlimited groups\nRemove Ads"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:visibility="gone" />
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <ImageButton
                 android:id="@+id/premium"
@@ -59,8 +46,7 @@
                 android:minHeight="35dp"
                 android:minWidth="125dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/buy"
-                android:visibility="gone" />
+                android:src="@drawable/buy" />
 
             <TextView
                 android:id="@+id/deluxe_title"
@@ -70,8 +56,7 @@
                 android:layout_marginTop="@dimen/default_gap_4x"
                 android:text="Deluxe ($9.99)"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/black"
-                android:visibility="gone" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/deluxe_desc"
@@ -82,8 +67,7 @@
                 android:layout_marginRight="@dimen/default_gap_4x"
                 android:layout_marginTop="@dimen/default_gap"
                 android:text="Every Premium Feature\nStealth Viewing - snaps appear as unviewed\nGod mode - users can&apos;t save your snaps"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:visibility="gone" />
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <ImageButton
                 android:id="@+id/deluxe"
@@ -95,8 +79,7 @@
                 android:minHeight="35dp"
                 android:minWidth="125dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/buy"
-                android:visibility="gone" />
+                android:src="@drawable/buy" />
         </LinearLayout>
     </ScrollView>
 
